# vla-cpp-core

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
action_decoder/: CMakeLists.txt  README.md  action_decoder.cpp  action_decoder.hpp  main_test.cpp
action_decoder/serial_publisher/: README.md  cmd_reader.cpp  serial_publisher.cpp  serial_publisher.hpp
benchmarks/: CMakeLists.txt  benchmark_pipeline.cpp
camera_pipeline/: CMakeLists.txt  README.md  camera_capture.cpp  camera_capture.hpp  main_test.cpp
camera_pipeline/ring_buffer/: README.md  ring_buffer.hpp  ring_buffer_test.cpp
inference_engine/: CMakeLists.txt  README.md  main_test.cpp  onnx_inference.cpp  onnx_inference.hpp
inference_engine/vision_encoder/: README.md  vision_encoder.cpp  vision_encoder.hpp
ros2_node/: CMakeLists.txt  README.md  package.xml
ros2_node/include/vla_inference_node/: vla_node.hpp
ros2_node/src/: main.cpp  vla_node.cpp
tests/: CMakeLists.txt
tests/integration/: test_full_pipeline.cpp
tests/unit/: test_action_decoder.cpp  test_camera_pipeline.cpp  test_main.cpp  test_onnx_wrapper.cpp  test_ring_buffer.cpp  test_serial_publisher.cpp  test_vision_encoder.cpp
